# md-notepad

./: .gitattributes  .gitignore  .prettierignore  AGENT_LOCKS.md  CLAUDE.md  README.md  THIRD-PARTY-NOTICES.txt  eslint.config.js  index.html  package-lock.json  package.json  plan.md  qa-checklists.md  tsconfig.json  vite.config.ts
.github/workflows/: android-build.yml  ci.yml  release.yml
docs/: README.md  keyboard-shortcuts.md  notes-tabs-and-saving.md  pictures-and-images.md  settings.md  themes.md  workspaces-and-files.md  writing-markdown.md
e2e/: tsconfig.json  wdio.conf.ts
e2e/specs/: smoke.e2e.ts
src/: README.md  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  README.md  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/plugins/tauri-plugin-androidfs/: Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-androidfs/android/: build.gradle.kts  consumer-rules.pro
src-tauri/plugins/tauri-plugin-androidfs/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-androidfs/android/src/main/java/com/plugin/androidfs/: AndroidfsPlugin.kt
src-tauri/plugins/tauri-plugin-androidfs/src/: desktop.rs  error.rs  lib.rs  mobile.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: android.rs  fs.rs  mod.rs  search.rs  watch.rs
src/core/: README.md  comments.ts  doc-model.ts  fonts.ts  fuzzy.ts  image-insert.ts  images.ts  link-mentions.ts  mode-sync.ts  notes-move.ts  outline.ts  search.ts  settings.ts  tab-groups.ts  text-files.ts  theme-plugins.ts  theme-seeds.ts  title.ts  types.ts
src/core/__tests__/: comments.test.ts  debounce.test.ts  doc-model.test.ts  fuzzy.test.ts  image-insert.test.ts  images.test.ts  link-mentions.test.ts  mode-sync.test.ts  notes-move.test.ts  outline.test.ts  plan-flush.test.ts  search.test.ts  settings.test.ts  tab-groups.test.ts  text-files.test.ts  theme-plugins.test.ts  title.test.ts
src/core/export/: doc-source.ts  docx.ts  pdf.ts
src/core/export/__tests__/: docx.test.ts  pdf.test.ts
src/core/import/: docx-html.ts  docx.ts  pdf-text.ts  pdf.ts  registry.ts
src/core/import/__tests__/: docx-html.test.ts  docx.test.ts  pdf-text.test.ts  registry.test.ts
src/core/session/: debounce.ts  plan-flush.ts
src/editors/: README.md  adapter.ts  cm6.ts  dismiss-keyboard.ts  image-paste.ts  list-indent.ts  markdown-highlight.ts  milkdown.ts  voice-gutter.ts  wysiwyg-normalize.ts
src/editors/__tests__/: dismiss-keyboard.test.ts  list-indent.test.ts  markdown-highlight.test.ts  wysiwyg-normalize.test.ts
src/ipc/: commands.ts  paths.ts  provider.ts  settings-store.ts  theme-loader.ts
src/ipc/__tests__/: commands.test.ts  paths.test.ts  provider.test.ts  theme-loader.test.ts
src/preview/: README.md  export.css  export.ts  mermaid.ts  pane.ts  pipeline.ts
src/preview/__tests__/: export.test.ts  mermaid.test.ts  pane.test.ts  pipeline.test.ts
src/styles/: app.css  base.css  preview.css  themes.css  voice-comments.css  wysiwyg.css
src/ui/: App.tsx  README.md  commands.ts  editor-registry.ts  fullscreen.ts  keymap.ts  outline-jump.ts  platform.ts  reader-fullscreen.ts  search-saf.ts  session.ts  tab-overflow.ts  theme-actions.ts  theme.ts  update.ts  voice-comments.ts
src/ui/__tests__/: commands.test.ts  fullscreen.test.ts  keymap.test.ts  outline-jump.test.ts  platform.test.ts  search-saf.test.ts  session.test.ts  tab-overflow.test.ts
src/ui/components/: CommandPalette.tsx  ConflictBanner.tsx  EditorHost.tsx  ExportPreviewDialog.tsx  FileExplorer.tsx  ImageView.tsx  ImportView.tsx  OutlinePanel.tsx  Ribbon.tsx  SearchPanel.tsx  SettingsDialog.tsx  StatusBar.tsx  TabBar.tsx  VoiceComments.tsx  WindowControls.tsx
src/ui/components/file-explorer/: ContextMenu.tsx  RenameInput.tsx  helpers.ts  useFileDrag.ts
src/ui/components/file-explorer/__tests__/: helpers.test.ts
src/ui/session/: context.ts  explorer-ops.ts  export.ts  facade.ts  flush-restore.ts  import-images.ts  index.ts  open-save.ts  windows.ts  workspaces.ts
src/ui/stores/: export-preview.ts  flush-signal.ts  preview-nav.ts  search.ts  settings.ts  tabs.ts  theme-registry.ts  ui.ts
src/ui/stores/__tests__/: export-preview.test.ts  search.test.ts  tabs.test.ts  theme-registry.test.ts  ui-split.test.ts
