[package]
name = "md-notepad"
version = "0.2.0"
description = "A minimal, fast, cross-platform markdown notepad with Notepad-style ephemeral tabs."
license = "GPL-3.0-only"
edition = "2021"

# The lib name is distinct from the bin name so Windows builds don't clash.
[lib]
name = "md_notepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
base64 = "0.22"
tempfile = "3"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-log = "2"

# Desktop-only plugins. These crates either don't compile for mobile
# (single-instance) or have no meaning there (window geometry, the
# self-updater, process restart/exit). Keep them out of the Android/iOS
# dependency graph entirely; lib.rs gates their registration on #[cfg(desktop)].
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
