[package]
name = "tauri-plugin-androidfs"
version = "0.1.0"
description = "Local MD Notepad plugin exposing Android Context APIs (external files dir; later content:// reads + incoming intents) that Tauri's path API and pure-Rust JNI cannot reach."
edition = "2021"
license = "GPL-3.0-only"
rust-version = "1.77.2"
# Required by tauri-plugin's build step (the metadata channel it emits for the
# Android gradle wiring keys off `links`); must equal package.name.
links = "tauri-plugin-androidfs"

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
